# ygodata-c

./: CMakeLists.txt  README.md
include/ygo/data/c/: DataUtils.h
src/: DataUtils.cpp
